<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <group android:id="@+id/acciones">
        <item
            android:id="@+id/drawer_armario"
            android:icon="@drawable/armario"
            android:title="@string/armario"  />
        <item
            android:id="@+id/drawer_amigos"
            android:icon="@drawable/amigos"
            android:title="@string/amigos" />

    </group>

    <group android:id="@+id/configuracion">
        <item

            android:id="@+id/drawer_ajustes"
            android:icon="@drawable/ajustes"
            android:title="@string/ajustes" />
        <item
            android:id="@+id/drawer_ayuda"
            android:icon="@drawable/ayuda"
            android:title="@string/ayuda" />
        <item
            android:id="@+id/drawer_sign_out"
            android:icon="@drawable/sign_out"
            android:title="@string/sign_out" />

    </group>










</menu>