<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="es.apps.sky.youandme.LoginActivity"
    android:transitionName="layoutSplash" android:id="@+id/layout_splash"
    android:background="@color/blue900"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="390dp"
        android:id="@+id/imgSplash"
        android:src="@drawable/fondo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"

        android:contentDescription="@string/contentimg"
        android:scaleType="fitStart" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/app_name"
        android:layout_gravity="center"
        android:id="@+id/txtDressYourSelf"

        android:textColor="@color/colorAccent"
        android:layout_below="@id/imgSplash"
        android:layout_centerHorizontal="true"
        android:textSize="48sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/splash_description"
        android:layout_gravity="center"
        android:id="@+id/txtDescription"
        android:layout_below="@+id/txtDressYourSelf"
        android:layout_centerHorizontal="true"
        android:textSize="32sp"
        android:textColor="@color/colorAccent" />



    <android.support.v4.app.FragmentTabHost
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@android:id/tabhost"
        android:layout_below="@id/txtDescription"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TabWidget
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@android:id/tabs"
                android:orientation="horizontal"
                />

            <FrameLayout
                android:layout_width="match_parent"
                android:id="@android:id/tabcontent"
                android:layout_height="match_parent"/>
        </LinearLayout>


    </android.support.v4.app.FragmentTabHost>


</RelativeLayout>